tests/snapshots/antlr4_rust_gen_cli__precedence_ladder_optimization_manifest.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: stable_manifest
---
{
  "version": 1,
  "reportOnly": false,
  "passes": [
    {
      "id": 0,
      "name": "collapse-precedence-ladders",
      "safetyClass": "recognition-preserving",
      "changed": true,
      "metrics": {"before": {"rules": 38, "alternatives": 53, "elements": 82}, "after": {"rules": 30, "alternatives": 45, "elements": 74}},
      "candidates": [
        {
          "grammar": "LadderParser",
          "entryRule": "sum",
          "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 76, "byteEnd": 114, "start": {"line": 11, "column": 0}, "end": {"line": 13, "column": 5}},
          "status": "applied",
          "reason": "collapsed 2 precedence rungs into sum",
          "rungs": ["sum", "product"],
          "boundaryRule": "primary",
          "projected": {"contextsPerOperand": {"before": 3, "after": 2, "reduction": 1}, "precedenceDecisions": {"before": 2, "after": 1, "reduction": 1}},
          "removedRules": [{"rule": "product", "targetRule": "sum"}],
          "alternatives": [
            {"sourceRule": "sum", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 86, "byteEnd": 108, "start": {"line": 12, "column": 6}, "end": {"line": 12, "column": 28}}, "targetRule": "sum", "targetAltLabels": ["SumProductBase1", "SumSumLoop3"]},
            {"sourceRule": "product", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 130, "byteEnd": 152, "start": {"line": 16, "column": 6}, "end": {"line": 16, "column": 28}}, "targetRule": "sum", "targetAltLabels": ["SumProductBase1", "SumProductLoop2"]}
          ],
          "labelRenames": [],
          "groupingChanges": [{"rule": "sum", "from": "flat-loop", "to": "left-recursive-nesting"}, {"rule": "product", "from": "flat-loop", "to": "left-recursive-nesting"}]
        },
        {
          "grammar": "LadderParser",
          "entryRule": "directEntry",
          "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 226, "byteEnd": 256, "start": {"line": 27, "column": 0}, "end": {"line": 29, "column": 5}},
          "status": "applied",
          "reason": "collapsed 3 precedence rungs into directEntry",
          "rungs": ["directEntry", "direct", "right"],
          "boundaryRule": "primary",
          "projected": {"contextsPerOperand": {"before": 4, "after": 2, "reduction": 2}, "precedenceDecisions": {"before": 2, "after": 1, "reduction": 1}},
          "removedRules": [{"rule": "direct", "targetRule": "directEntry"}, {"rule": "right", "targetRule": "directEntry"}],
          "alternatives": [
            {"sourceRule": "directEntry", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 244, "byteEnd": 250, "start": {"line": 28, "column": 6}, "end": {"line": 28, "column": 12}}, "targetRule": "directEntry", "targetAltLabels": ["DirectEntryRightBase1"]},
            {"sourceRule": "direct", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 271, "byteEnd": 276, "start": {"line": 32, "column": 6}, "end": {"line": 32, "column": 11}}, "targetRule": "directEntry", "targetAltLabels": ["DirectEntryRightBase1"]},
            {"sourceRule": "direct", "sourceAlternative": 2, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 283, "byteEnd": 299, "start": {"line": 33, "column": 6}, "end": {"line": 33, "column": 22}}, "targetRule": "directEntry", "targetAltLabels": ["DirectEntryDirectOperator3"]},
            {"sourceRule": "right", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 319, "byteEnd": 339, "start": {"line": 37, "column": 6}, "end": {"line": 37, "column": 26}}, "targetRule": "directEntry", "targetAltLabels": ["DirectEntryRightBase1", "DirectEntryRightRight2"]}
          ],
          "labelRenames": [],
          "groupingChanges": []
        },
        {
          "grammar": "LadderParser",
          "entryRule": "expr",
          "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 347, "byteEnd": 440, "start": {"line": 40, "column": 0}, "end": {"line": 42, "column": 5}},
          "status": "applied",
          "reason": "collapsed 6 precedence rungs into expr",
          "rungs": ["expr", "conditionalOr", "conditionalAnd", "relation", "calc", "unary"],
          "boundaryRule": "atom",
          "projected": {"contextsPerOperand": {"before": 7, "after": 2, "reduction": 5}, "precedenceDecisions": {"before": 6, "after": 1, "reduction": 5}},
          "removedRules": [{"rule": "conditionalOr", "targetRule": "expr"}, {"rule": "conditionalAnd", "targetRule": "expr"}, {"rule": "relation", "targetRule": "expr"}, {"rule": "calc", "targetRule": "expr"}, {"rule": "unary", "targetRule": "expr"}],
          "alternatives": [
            {"sourceRule": "expr", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 358, "byteEnd": 434, "start": {"line": 41, "column": 6}, "end": {"line": 41, "column": 82}}, "targetRule": "expr", "targetAltLabels": ["AtomExpression", "ExprExprRight6"]},
            {"sourceRule": "conditionalOr", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 462, "byteEnd": 522, "start": {"line": 45, "column": 6}, "end": {"line": 45, "column": 66}}, "targetRule": "expr", "targetAltLabels": ["AtomExpression", "ExprConditionalOrLoop5"]},
            {"sourceRule": "conditionalAnd", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 551, "byteEnd": 599, "start": {"line": 49, "column": 6}, "end": {"line": 49, "column": 54}}, "targetRule": "expr", "targetAltLabels": ["AtomExpression", "ExprConditionalAndLoop4"]},
            {"sourceRule": "relation", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 622, "byteEnd": 626, "start": {"line": 53, "column": 6}, "end": {"line": 53, "column": 10}}, "targetRule": "expr", "targetAltLabels": ["AtomExpression"]},
            {"sourceRule": "relation", "sourceAlternative": 2, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 633, "byteEnd": 699, "start": {"line": 54, "column": 6}, "end": {"line": 54, "column": 72}}, "targetRule": "expr", "targetAltLabels": ["ExprRelationOperator3"]},
            {"sourceRule": "calc", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 718, "byteEnd": 723, "start": {"line": 58, "column": 6}, "end": {"line": 58, "column": 11}}, "targetRule": "expr", "targetAltLabels": ["AtomExpression"]},
            {"sourceRule": "calc", "sourceAlternative": 2, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 730, "byteEnd": 766, "start": {"line": 59, "column": 6}, "end": {"line": 59, "column": 42}}, "targetRule": "expr", "targetAltLabels": ["ExprCalcOperator1"]},
            {"sourceRule": "calc", "sourceAlternative": 3, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 773, "byteEnd": 803, "start": {"line": 60, "column": 6}, "end": {"line": 60, "column": 36}}, "targetRule": "expr", "targetAltLabels": ["ExprCalcOperator2"]},
            {"sourceRule": "unary", "sourceAlternative": 1, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 823, "byteEnd": 861, "start": {"line": 64, "column": 6}, "end": {"line": 64, "column": 44}}, "targetRule": "expr", "targetAltLabels": ["AtomExpression"]},
            {"sourceRule": "unary", "sourceAlternative": 2, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 868, "byteEnd": 903, "start": {"line": 65, "column": 6}, "end": {"line": 65, "column": 41}}, "targetRule": "expr", "targetAltLabels": ["LogicalNot"]},
            {"sourceRule": "unary", "sourceAlternative": 3, "source": {"path": "$CARGO_MANIFEST_DIR/tests/fixtures/antlr4-rust-gen/precedence-ladder/Ladder.g4", "byteStart": 910, "byteEnd": 941, "start": {"line": 66, "column": 6}, "end": {"line": 66, "column": 37}}, "targetRule": "expr", "targetAltLabels": ["Negate"]}
          ],
          "labelRenames": [],
          "groupingChanges": [{"rule": "conditionalOr", "from": "flat-loop", "to": "left-recursive-nesting"}, {"rule": "conditionalAnd", "from": "flat-loop", "to": "left-recursive-nesting"}]
        }
      ]
    }
  ]
}
