tests/snapshots/antlr4_rust_gen_cli__unsupported_antlr4rust_surface_diagnostics.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: "diagnostics.join(\"\\n\")"
---
Error: Custom { kind: InvalidData, error: "$GRAMMAR:4:6: cannot lower embedded parser predicate coordinate (0, 0) in rule start: antlr4rust compatibility lowering: unsupported `recog.input.peek` accessor" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:4:6: cannot lower embedded parser predicate coordinate (0, 0) in rule start: antlr4rust compatibility lowering: unsupported `_localctx.context` accessor" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:4:6: cannot lower embedded parser predicate coordinate (0, 0) in rule start: antlr4rust compatibility lowering: `recog.input.la` accepts exactly one offset argument" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:4:6: cannot lower embedded parser predicate coordinate (0, 0) in rule start: cannot classify embedded Rust syntax: at 1:15: no viable alternative at input 'let_broken=(;'" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:4:6: cannot lower embedded parser @init in rule start (0): antlr4rust compatibility lowering: unsupported `recog.input.peek` accessor" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:4:7: cannot lower embedded parser @after in rule start (0): antlr4rust compatibility lowering: unsupported `recog.input.peek` accessor" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:3:7: cannot lower embedded lexer action coordinate (0, 0) in rule A: antlr4rust compatibility lowering: `recog.input` is only supported in embedded parser bodies" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:3:7: cannot lower embedded lexer action coordinate (0, 0) in rule A: antlr4rust compatibility lowering: `_localctx` is only supported in embedded parser bodies" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR:3:0: cannot lower embedded antlr4rust compatibility accessors in rule start (0): antlr4rust compatibility accessor `item_all` in StartContext is ambiguous between parser rule `item` and parser rule `item_all`" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR: cannot lower embedded parser member field type: cannot classify embedded Rust syntax: at 1:64: no viable alternative at input 'type__Antlr4RustMemberField=[u8;BadMemberFieldTypeParser_A+]'" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR: cannot lower embedded parser member field initializer: cannot classify embedded Rust syntax: at 2:0: no viable alternative at input 'BadMemberFieldInitializerParser_A+}'" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR: cannot lower embedded parser member impl item: cannot classify embedded Rust syntax: at 1:54: no viable alternative at input 'BadMemberImplItemParser_A+}'" }

Error: Custom { kind: InvalidData, error: "$GRAMMAR: cannot lower embedded parser member module item: cannot classify embedded Rust syntax: at 2:51: no viable alternative at input 'BadMemberModuleItemParser_A+}'" }
